deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-affordability
  labels:
    app: food-affordability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-affordability
  template:
    metadata:
      labels:
        app: food-affordability
    spec:
      containers:
      - name: food-affordability
        image: youssef75ensae/food-affordability:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
