deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-affordability
spec:
  selector:
    app: food-affordability
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
