deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-affordability
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: food-affordability-django75.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: food-affordability
            port:
              number: 8501
